# agent-school

./: .env.example  .gitignore  README.md  batch.py  download_data.py  eval.py  eval_judge.py  generate_data.py  generate_script.py  launch_train.sh  lfm_train_sft.py  main.py  merge.py  monitor_training.py  pyproject.toml  qwen3_5_moe (1).py  test_checkpoint.py  train.py  train_gpu.py  train_unsloth_h200.py  transcriber.py  tui.py
reference-cookbook/: README.md  create_data.py  train.py
